--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-light-blue: #afe9fa;
+  --color-neutral: #7f7f7f;
+  --color-neutral-light: #d9d9d9;
+  --color-violet: #4d5068;
+  --color-white: #ffffff;
+  --gradient-light-blue: linear-gradient(
+    180deg,
+    var(--color-light-blue) 0%,
+    var(--color-white) 100%
+  );
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+body {
+  margin: 0;
 }
