--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,19 @@ h1 {
 }
 
 .header {
+  align-items: center;
   background: transparent var(--gradient-light-blue) 0% 0% no-repeat padding-box;
-  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   min-height: 190px;
+  padding: 40px 20px;
   text-align: center;
+}
+
+.selector {
+  max-width: 360px;
+  width: 100%;
 }
 
 /*************************************************************************************
@@ -28,11 +37,19 @@ h1 {
   .header {
     min-height: 220px;
   }
+
+  .selector {
+    max-width: 600px;
+  }
 }
 
 /* DESKTOP */
 @media only screen and (min-width: 1025px) {
   .header {
     min-height: 165px;
+  }
+
+  .selector {
+    max-width: 360px;
   }
 }
