--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,21 @@ h1 {
   color: var(--color-violet);
   font-family: primot, Georgia;
   font-size: 50px;
-  font-weight: bold;
   line-height: 56px;
   margin: 0;
+}
+
+h2 {
+  font-size: 22px;
+  line-height: 22px;
+  margin: 0 0 10px 0;
+}
+
+.cards {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
 
 .header {
@@ -14,8 +26,12 @@ h1 {
   flex-direction: column;
   justify-content: space-around;
   min-height: 190px;
-  padding: 40px 20px;
+  padding: 40px 0 20px 0;
   text-align: center;
+}
+
+.mobile-hidden {
+  display: none;
 }
 
 .selector {
@@ -34,8 +50,20 @@ h1 {
     line-height: 66px;
   }
 
+  .cards {
+    padding: 0 40px;
+  }
+
   .header {
     min-height: 220px;
+  }
+
+  .mobile-hidden {
+    display: block;
+  }
+
+  .mobile-only {
+    display: none;
   }
 
   .selector {
